Lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt
Rule 2     program -> program stmt
Rule 3     stmt -> expr ;
Rule 4     stmt -> RETURN expr ;
Rule 5     stmt -> BREAK ;
Rule 6     stmt -> CONTINUE ;
Rule 7     stmt -> ;
Rule 8     stmt -> { }
Rule 9     stmt_list -> stmt
Rule 10    stmt_list -> stmt_list stmt
Rule 11    stmt -> { stmt_list }
Rule 12    stmt -> PRINT list ;
Rule 13    expr -> INTNUM
Rule 14    expr -> FLOATNUM
Rule 15    expr -> STR
Rule 16    expr -> expr ADD expr
Rule 17    expr -> expr SUB expr
Rule 18    expr -> expr MUL expr
Rule 19    expr -> expr DIV expr
Rule 20    expr -> expr DOT_ADD expr
Rule 21    expr -> expr DOT_SUB expr
Rule 22    expr -> expr DOT_MUL expr
Rule 23    expr -> expr DOT_DIV expr
Rule 24    expr -> expr GT expr
Rule 25    expr -> expr LT expr
Rule 26    expr -> expr GTE expr
Rule 27    expr -> expr LTE expr
Rule 28    expr -> expr EQ expr
Rule 29    expr -> expr NEQ expr
Rule 30    expr -> EYE ( list )
Rule 31    expr -> ONES ( list )
Rule 32    expr -> ZEROS ( list )
Rule 33    expr -> EYE ( )
Rule 34    expr -> ONES ( )
Rule 35    expr -> ZEROS ( )
Rule 36    expr -> lvalue ASSIGN expr
Rule 37    expr -> lvalue ADD_ASSIGN expr
Rule 38    expr -> lvalue SUB_ASSIGN expr
Rule 39    expr -> lvalue MUL_ASSIGN expr
Rule 40    expr -> lvalue DIV_ASSIGN expr
Rule 41    expr -> expr '
Rule 42    lvalue -> ID
Rule 43    expr -> SUB expr
Rule 44    expr -> lvalue
Rule 45    expr -> ( expr )
Rule 46    lvalue -> expr [ list ]
Rule 47    expr -> [ ]
Rule 48    expr -> [ list ]
Rule 49    list -> expr
Rule 50    list -> range
Rule 51    list -> list , expr
Rule 52    list -> list , range
Rule 53    stmt -> IF ( expr ) stmt
Rule 54    stmt -> IF ( expr ) stmt ELSE stmt
Rule 55    stmt -> WHILE ( expr ) stmt
Rule 56    range -> expr : expr
Rule 57    stmt -> FOR ID ASSIGN range stmt

Terminals, with rules where they appear

'                    : 41
(                    : 30 31 32 33 34 35 45 53 54 55
)                    : 30 31 32 33 34 35 45 53 54 55
,                    : 51 52
:                    : 56
;                    : 3 4 5 6 7 12
ADD                  : 16
ADD_ASSIGN           : 37
ASSIGN               : 36 57
BREAK                : 5
CONTINUE             : 6
DIV                  : 19
DIV_ASSIGN           : 40
DOT_ADD              : 20
DOT_DIV              : 23
DOT_MUL              : 22
DOT_SUB              : 21
ELSE                 : 54
EQ                   : 28
EYE                  : 30 33
FLOATNUM             : 14
FOR                  : 57
GT                   : 24
GTE                  : 26
ID                   : 42 57
IF                   : 53 54
INTNUM               : 13
LT                   : 25
LTE                  : 27
MUL                  : 18
MUL_ASSIGN           : 39
NEQ                  : 29
ONES                 : 31 34
PRINT                : 12
RETURN               : 4
STR                  : 15
SUB                  : 17 43
SUB_ASSIGN           : 38
WHILE                : 55
ZEROS                : 32 35
[                    : 46 47 48
]                    : 46 47 48
error                : 
{                    : 8 11
}                    : 8 11

Nonterminals, with rules where they appear

expr                 : 3 4 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 36 37 38 39 40 41 43 45 46 49 51 53 54 55 56 56
list                 : 12 30 31 32 46 48 51 52
lvalue               : 36 37 38 39 40 44
program              : 2 0
range                : 50 52 57
stmt                 : 1 2 9 10 53 54 54 55 57
stmt_list            : 10 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt
    (2) program -> . program stmt
    (3) stmt -> . expr ;
    (4) stmt -> . RETURN expr ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . CONTINUE ;
    (7) stmt -> . ;
    (8) stmt -> . { }
    (11) stmt -> . { stmt_list }
    (12) stmt -> . PRINT list ;
    (53) stmt -> . IF ( expr ) stmt
    (54) stmt -> . IF ( expr ) stmt ELSE stmt
    (55) stmt -> . WHILE ( expr ) stmt
    (57) stmt -> . FOR ID ASSIGN range stmt
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( list )
    (31) expr -> . ONES ( list )
    (32) expr -> . ZEROS ( list )
    (33) expr -> . EYE ( )
    (34) expr -> . ONES ( )
    (35) expr -> . ZEROS ( )
    (36) expr -> . lvalue ASSIGN expr
    (37) expr -> . lvalue ADD_ASSIGN expr
    (38) expr -> . lvalue SUB_ASSIGN expr
    (39) expr -> . lvalue MUL_ASSIGN expr
    (40) expr -> . lvalue DIV_ASSIGN expr
    (41) expr -> . expr '
    (43) expr -> . SUB expr
    (44) expr -> . lvalue
    (45) expr -> . ( expr )
    (47) expr -> . [ ]
    (48) expr -> . [ list ]
    (42) lvalue -> . ID
    (46) lvalue -> . expr [ list ]

    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    ;               shift and go to state 4
    {               shift and go to state 8
    PRINT           shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    program                        shift and go to state 1
    stmt                           shift and go to state 2
    expr                           shift and go to state 3
    lvalue                         shift and go to state 22

state 1

    (0) S' -> program .
    (2) program -> program . stmt
    (3) stmt -> . expr ;
    (4) stmt -> . RETURN expr ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . CONTINUE ;
    (7) stmt -> . ;
    (8) stmt -> . { }
    (11) stmt -> . { stmt_list }
    (12) stmt -> . PRINT list ;
    (53) stmt -> . IF ( expr ) stmt
    (54) stmt -> . IF ( expr ) stmt ELSE stmt
    (55) stmt -> . WHILE ( expr ) stmt
    (57) stmt -> . FOR ID ASSIGN range stmt
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( list )
    (31) expr -> . ONES ( list )
    (32) expr -> . ZEROS ( list )
    (33) expr -> . EYE ( )
    (34) expr -> . ONES ( )
    (35) expr -> . ZEROS ( )
    (36) expr -> . lvalue ASSIGN expr
    (37) expr -> . lvalue ADD_ASSIGN expr
    (38) expr -> . lvalue SUB_ASSIGN expr
    (39) expr -> . lvalue MUL_ASSIGN expr
    (40) expr -> . lvalue DIV_ASSIGN expr
    (41) expr -> . expr '
    (43) expr -> . SUB expr
    (44) expr -> . lvalue
    (45) expr -> . ( expr )
    (47) expr -> . [ ]
    (48) expr -> . [ list ]
    (42) lvalue -> . ID
    (46) lvalue -> . expr [ list ]

    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    ;               shift and go to state 4
    {               shift and go to state 8
    PRINT           shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    stmt                           shift and go to state 24
    expr                           shift and go to state 3
    lvalue                         shift and go to state 22

state 2

    (1) program -> stmt .

    RETURN          reduce using rule 1 (program -> stmt .)
    BREAK           reduce using rule 1 (program -> stmt .)
    CONTINUE        reduce using rule 1 (program -> stmt .)
    ;               reduce using rule 1 (program -> stmt .)
    {               reduce using rule 1 (program -> stmt .)
    PRINT           reduce using rule 1 (program -> stmt .)
    IF              reduce using rule 1 (program -> stmt .)
    WHILE           reduce using rule 1 (program -> stmt .)
    FOR             reduce using rule 1 (program -> stmt .)
    INTNUM          reduce using rule 1 (program -> stmt .)
    FLOATNUM        reduce using rule 1 (program -> stmt .)
    STR             reduce using rule 1 (program -> stmt .)
    EYE             reduce using rule 1 (program -> stmt .)
    ONES            reduce using rule 1 (program -> stmt .)
    ZEROS           reduce using rule 1 (program -> stmt .)
    SUB             reduce using rule 1 (program -> stmt .)
    (               reduce using rule 1 (program -> stmt .)
    [               reduce using rule 1 (program -> stmt .)
    ID              reduce using rule 1 (program -> stmt .)
    $end            reduce using rule 1 (program -> stmt .)


state 3

    (3) stmt -> expr . ;
    (16) expr -> expr . ADD expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . DOT_ADD expr
    (21) expr -> expr . DOT_SUB expr
    (22) expr -> expr . DOT_MUL expr
    (23) expr -> expr . DOT_DIV expr
    (24) expr -> expr . GT expr
    (25) expr -> expr . LT expr
    (26) expr -> expr . GTE expr
    (27) expr -> expr . LTE expr
    (28) expr -> expr . EQ expr
    (29) expr -> expr . NEQ expr
    (41) expr -> expr . '
    (46) lvalue -> expr . [ list ]

    ;               shift and go to state 25
    ADD             shift and go to state 26
    SUB             shift and go to state 27
    MUL             shift and go to state 28
    DIV             shift and go to state 29
    DOT_ADD         shift and go to state 30
    DOT_SUB         shift and go to state 31
    DOT_MUL         shift and go to state 32
    DOT_DIV         shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35
    GTE             shift and go to state 36
    LTE             shift and go to state 37
    EQ              shift and go to state 38
    NEQ             shift and go to state 39
    '               shift and go to state 40
    [               shift and go to state 41


state 4

    (7) stmt -> ; .

    RETURN          reduce using rule 7 (stmt -> ; .)
    BREAK           reduce using rule 7 (stmt -> ; .)
    CONTINUE        reduce using rule 7 (stmt -> ; .)
    ;               reduce using rule 7 (stmt -> ; .)
    {               reduce using rule 7 (stmt -> ; .)
    PRINT           reduce using rule 7 (stmt -> ; .)
    IF              reduce using rule 7 (stmt -> ; .)
    WHILE           reduce using rule 7 (stmt -> ; .)
    FOR             reduce using rule 7 (stmt -> ; .)
    INTNUM          reduce using rule 7 (stmt -> ; .)
    FLOATNUM        reduce using rule 7 (stmt -> ; .)
    STR             reduce using rule 7 (stmt -> ; .)
    EYE             reduce using rule 7 (stmt -> ; .)
    ONES            reduce using rule 7 (stmt -> ; .)
    ZEROS           reduce using rule 7 (stmt -> ; .)
    SUB             reduce using rule 7 (stmt -> ; .)
    (               reduce using rule 7 (stmt -> ; .)
    [               reduce using rule 7 (stmt -> ; .)
    ID              reduce using rule 7 (stmt -> ; .)
    $end            reduce using rule 7 (stmt -> ; .)
    }               reduce using rule 7 (stmt -> ; .)
    ELSE            reduce using rule 7 (stmt -> ; .)


state 5

    (4) stmt -> RETURN . expr ;
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( list )
    (31) expr -> . ONES ( list )
    (32) expr -> . ZEROS ( list )
    (33) expr -> . EYE ( )
    (34) expr -> . ONES ( )
    (35) expr -> . ZEROS ( )
    (36) expr -> . lvalue ASSIGN expr
    (37) expr -> . lvalue ADD_ASSIGN expr
    (38) expr -> . lvalue SUB_ASSIGN expr
    (39) expr -> . lvalue MUL_ASSIGN expr
    (40) expr -> . lvalue DIV_ASSIGN expr
    (41) expr -> . expr '
    (43) expr -> . SUB expr
    (44) expr -> . lvalue
    (45) expr -> . ( expr )
    (47) expr -> . [ ]
    (48) expr -> . [ list ]
    (42) lvalue -> . ID
    (46) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    expr                           shift and go to state 42
    lvalue                         shift and go to state 22

state 6

    (5) stmt -> BREAK . ;

    ;               shift and go to state 43


state 7

    (6) stmt -> CONTINUE . ;

    ;               shift and go to state 44


state 8

    (8) stmt -> { . }
    (11) stmt -> { . stmt_list }
    (9) stmt_list -> . stmt
    (10) stmt_list -> . stmt_list stmt
    (3) stmt -> . expr ;
    (4) stmt -> . RETURN expr ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . CONTINUE ;
    (7) stmt -> . ;
    (8) stmt -> . { }
    (11) stmt -> . { stmt_list }
    (12) stmt -> . PRINT list ;
    (53) stmt -> . IF ( expr ) stmt
    (54) stmt -> . IF ( expr ) stmt ELSE stmt
    (55) stmt -> . WHILE ( expr ) stmt
    (57) stmt -> . FOR ID ASSIGN range stmt
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( list )
    (31) expr -> . ONES ( list )
    (32) expr -> . ZEROS ( list )
    (33) expr -> . EYE ( )
    (34) expr -> . ONES ( )
    (35) expr -> . ZEROS ( )
    (36) expr -> . lvalue ASSIGN expr
    (37) expr -> . lvalue ADD_ASSIGN expr
    (38) expr -> . lvalue SUB_ASSIGN expr
    (39) expr -> . lvalue MUL_ASSIGN expr
    (40) expr -> . lvalue DIV_ASSIGN expr
    (41) expr -> . expr '
    (43) expr -> . SUB expr
    (44) expr -> . lvalue
    (45) expr -> . ( expr )
    (47) expr -> . [ ]
    (48) expr -> . [ list ]
    (42) lvalue -> . ID
    (46) lvalue -> . expr [ list ]

    }               shift and go to state 45
    RETURN          shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    ;               shift and go to state 4
    {               shift and go to state 8
    PRINT           shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    stmt_list                      shift and go to state 46
    stmt                           shift and go to state 47
    expr                           shift and go to state 3
    lvalue                         shift and go to state 22

state 9

    (12) stmt -> PRINT . list ;
    (49) list -> . expr
    (50) list -> . range
    (51) list -> . list , expr
    (52) list -> . list , range
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( list )
    (31) expr -> . ONES ( list )
    (32) expr -> . ZEROS ( list )
    (33) expr -> . EYE ( )
    (34) expr -> . ONES ( )
    (35) expr -> . ZEROS ( )
    (36) expr -> . lvalue ASSIGN expr
    (37) expr -> . lvalue ADD_ASSIGN expr
    (38) expr -> . lvalue SUB_ASSIGN expr
    (39) expr -> . lvalue MUL_ASSIGN expr
    (40) expr -> . lvalue DIV_ASSIGN expr
    (41) expr -> . expr '
    (43) expr -> . SUB expr
    (44) expr -> . lvalue
    (45) expr -> . ( expr )
    (47) expr -> . [ ]
    (48) expr -> . [ list ]
    (56) range -> . expr : expr
    (42) lvalue -> . ID
    (46) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    list                           shift and go to state 48
    expr                           shift and go to state 49
    range                          shift and go to state 50
    lvalue                         shift and go to state 22

state 10

    (53) stmt -> IF . ( expr ) stmt
    (54) stmt -> IF . ( expr ) stmt ELSE stmt

    (               shift and go to state 51


state 11

    (45) expr -> ( . expr )
    (13) expr -> . INTNUM
    (14) expr -> . FLOATNUM
    (15) expr -> . STR
    (16) expr -> . expr ADD expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr DOT_ADD expr
    (21) expr -> . expr DOT_SUB expr
    (22) expr -> . expr DOT_MUL expr
    (23) expr -> . expr DOT_DIV expr
    (24) expr -> . expr GT expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GTE expr
    (27) expr -> . expr LTE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . EYE ( list )
    (31) expr -> . ONES ( list )
    (32) expr -> . ZEROS ( list )
    (33) expr -> . EYE ( )
    (34) expr -> . ONES ( )
    (35) expr -> . ZEROS ( )
    (36) expr -> . lvalue ASSIGN expr
    (37) expr -> . lvalue ADD_ASSIGN expr
    (38) expr -> . lvalue SUB_ASSIGN expr
    (39) expr -> . lvalue MUL_ASSIGN expr
    (40) expr -> . lvalue DIV_ASSIGN expr
    (41) expr -> . expr '
    (43) expr -> . SUB expr
    (44) expr -> . lvalue
    (45) expr -> . ( expr )
    (47) expr -> . [ ]
    (48) expr -> . [ list ]
    (42) lvalue -> . ID
    (46) lvalue -> . expr [ list ]

    INTNUM          shift and go to state 15
    FLOATNUM        shift and go to state 16
    STR             shift and go to state 17
    EYE             shift and go to state 19
    ONES            shift and go to state 20
    ZEROS           shift and go to state 21
    SUB             shift and go to state 18
    (               shift and go to state 11
    [               shift and go to state 23
    ID              shift and go to state 14

    expr                           shift and go to state 52
    lvalue                         shift and go to state 22

state 12

    (55) stmt -> WHILE . ( expr ) stmt

    (               shift and go to state 53


state 13

    (57) stmt -> FOR . ID ASSIGN range stmt

    ID              shift and go to state 54


state 14

    (42) lvalue -> ID .

    ASSIGN          reduce using rule 42 (lvalue -> ID .)
    ADD_ASSIGN      reduce using rule 42 (lvalue -> ID .)
    SUB_ASSIGN      reduce using rule 42 (lvalue -> ID .)
    MUL_ASSIGN      reduce using rule 42 (lvalue -> ID .)
    DIV_ASSIGN      reduce using rule 42 (lvalue -> ID .)
    ;               reduce using rule 42 (lvalue -> ID .)
    ADD             reduce using rule 42 (lvalue -> ID .)
    SUB             reduce using rule 42 (lvalue -> ID .)
    MUL             reduce using rule 42 (lvalue -> ID .)
    DIV             reduce using rule 42 (lvalue -> ID .)
    DOT_ADD         reduce using rule 42 (lvalue -> ID .)
    DOT_SUB         reduce using rule 42 (lvalue -> ID .)
    DOT_MUL         reduce using rule 42 (lvalue -> ID .)
    DOT_DIV         reduce using rule 42 (lvalue -> ID .)
    GT              reduce using rule 42 (lvalue -> ID .)
    LT              reduce using rule 42 (lvalue -> ID .)
    GTE             reduce using rule 42 (lvalue -> ID .)
    LTE             reduce using rule 42 (lvalue -> ID .)
    EQ              reduce using rule 42 (lvalue -> ID .)
    NEQ             reduce using rule 42 (lvalue -> ID .)
    '               reduce using rule 42 (lvalue -> ID .)
    [               reduce using rule 42 (lvalue -> ID .)
    :               reduce using rule 42 (lvalue -> ID .)
    ,               reduce using rule 42 (lvalue -> ID .)
    )               reduce using rule 42 (lvalue -> ID .)
    ]               reduce using rule 42 (lvalue -> ID .)
    RETURN          reduce using rule 42 (lvalue -> ID .)
    BREAK           reduce using rule 42 (lvalue -> ID .)
    CONTINUE        reduce using rule 42 (lvalue -> ID .)
    {               reduce using rule 42 (lvalue -> ID .)
    PRINT           reduce using rule 42 (lvalue -> ID .)
    IF              reduce using rule 42 (lvalue -> ID .)
    WHILE           reduce using rule 42 (lvalue -> ID .)
    FOR             reduce using rule 42 (lvalue -> ID .)
    INTNUM          reduce using rule 42 (lvalue -> ID .)
    FLOATNUM        reduce using rule 42 (lvalue -> ID .)
    STR             reduce using rule 42 (lvalue -> ID .)
    EYE             reduce using rule 42 (lvalue -> ID .)
    ONES            reduce using rule 42 (lvalue -> ID .)
    ZEROS           reduce using rule 42 (lvalue -> ID .)
    (               reduce using rule 42 (lvalue -> ID .)
    ID              reduce using rule 42 (lvalue -> ID .)


state 15

    (13) expr -> INTNUM .

    ;               reduce using rule 13 (expr -> INTNUM .)
    ADD             reduce using rule 13 (expr -> INTNUM .)
    SUB             reduce using rule 13 (expr -> INTNUM .)
    MUL             reduce using rule 13 (expr -> INTNUM .)
    DIV             reduce using rule 13 (expr -> INTNUM .)
    DOT_ADD         reduce using rule 13 (expr -> INTNUM .)
    DOT_SUB         reduce using rule 13 (expr -> INTNUM .)
    DOT_MUL         reduce using rule 13 (expr -> INTNUM .)
    DOT_DIV         reduce using rule 13 (expr -> INTNUM .)
    GT              reduce using rule 13 (expr -> INTNUM .)
    LT              reduce using rule 13 (expr -> INTNUM .)
    GTE             reduce using rule 13 (expr -> INTNUM .)
    LTE             reduce using rule 13 (expr -> INTNUM .)
    EQ              reduce using rule 13 (expr -> INTNUM .)
    NEQ             reduce using rule 13 (expr -> INTNUM .)
    '               reduce using rule 13 (expr -> INTNUM .)
    [               reduce using rule 13 (expr -> INTNUM .)
    :               reduce using rule 13 (expr -> INTNUM .)
    ,               reduce using rule 13 (expr -> INTNUM .)
    )               reduce using rule 13 (expr -> INTNUM .)
    ]               reduce using rule 13 (expr -> INTNUM .)
    RETURN          reduce using rule 13 (expr -> INTNUM .)
    BREAK           reduce using rule 13 (expr -> INTNUM .)
    CONTINUE        reduce using rule 13 (expr -> INTNUM .)
    {               reduce using rule 13 (expr -> INTNUM .)
    PRINT           reduce using rule 13 (expr -> INTNUM .)
    IF              reduce using rule 13 (expr -> INTNUM .)
    WHILE           reduce using rule 13 (expr -> INTNUM .)
    FOR             reduce using rule 13 (expr -> INTNUM .)
    INTNUM          reduce using rule 13 (expr -> INTNUM .)
    FLOATNUM        reduce using rule 13 (expr -> INTNUM .)
    STR             reduce using rule 13 (expr -> INTNUM .)
    EYE             reduce using rule 13 (expr -> INTNUM .)
    ONES            reduce using rule 13 (expr -> INTNUM .)
    ZEROS           reduce using rule 13 (expr -> INTNUM .)
    (               reduce using rule 13 (expr -> INTNUM .)
    ID              reduce using rule 13 (expr -> INTNUM .)


state 16

    (14) expr -> FLOATNUM .

    ;               reduce using rule 14 (expr -> FLOATNUM .)
    ADD             reduce using rule 14 (expr -> FLOATNUM .)
    SUB             reduce using rule 14 (expr -> FLOATNUM .)
    MUL             reduce using rule 14 (expr -> FLOATNUM .)
    DIV             reduce using rule 14 (expr -> FLOATNUM .)
    DOT_ADD         reduce using rule 14 (expr -> FLOATNUM .)
    DOT_SUB         reduce using rule 14 (expr -> FLOATNUM .)
    DOT_MUL         reduce using rule 14 (expr -> FLOATNUM .)
    DOT_DIV         reduce using rule 14 (expr -> FLOATNUM .)
    GT              reduce using rule 14 (expr -> FLOATNUM .)
    LT              reduce using rule 14 (expr -> FLOATNUM .)
    GTE             reduce using rule 14 (expr -> FLOATNUM .)
    LTE             reduce using rule 14 (expr -> FLOATNUM .)
    EQ              reduce using rule 14 (expr -> FLOATNUM .)
    NEQ             reduce using rule 14 (expr -> FLOATNUM .)
    '               reduce using rule 14 (expr -> FLOATNUM .)
    [               reduce using rule 14 (expr -> FLOATNUM .)
    :               reduce using rule 14 (expr -> FLOATNUM .)
    ,               reduce using rule 14 (expr -> FLOATNUM .)
    )               reduce using rule 14 (expr -> FLOATNUM .)
    ]               reduce using rule 14 (expr -> FLOATNUM .)
    RETURN          reduce using rule 14 (expr -> FLOATNUM .)
    BREAK           reduce using rule 14 (expr -> FLOATNUM .)
    CONTINUE        reduce using rule 14 (expr -> FLOATNUM .)
    {               reduce using rule 14 (expr -> FLOATNUM .)
    PRINT           reduce using rule 14 (expr -> FLOATNUM .)
    IF              reduce using rule 14 (expr -> FLOATNUM .)
    WHILE           reduce using rule 14 (expr -> FLOATNUM .)
    FOR             reduce using rule 14 (expr -> FLOATNUM .)
    INTNUM          reduce using rule 14 (expr -> FLOATNUM .)
    FLOATNUM        reduce using rule 14 (expr -> FLOATNUM .)
    STR             reduce using rule 14 (expr -> FLOATNUM .)
    EYE             reduce using rule 14 (expr -> FLOATNUM .)
    ONES            reduce using rule 14 (expr -> FLOATNUM .)
    ZEROS           reduce using rule 14 (expr -> FLOATNUM .)
    (               reduce using rule 14 (expr -> FLOATNUM .)
    ID              reduce using rule 14 (expr -> FLOATNUM .)


state 17

    (15) expr -> STR .

    ;               reduce using rule 15 (expr -> STR .)
    ADD             reduce using rule 15 (expr -> STR .)
    SUB             reduce using rule 15 (expr -> STR .)
    MUL             reduce using rule 15 (expr -> STR .)
    DIV             reduce using rule 15 (expr -> STR .)
    DOT_ADD         reduce using rule 15 (expr -> STR .)
    DOT_SUB         reduce using rule 15 (expr -> STR .)
    DOT_MUL         reduce using rule 15 (expr -> STR .)
    DOT_DIV         reduce using rule 15 (expr -> STR .)
    GT              reduce using rule 15 (expr -> STR .)
    LT              reduce using rule 15 (expr -> STR .)
    GTE             reduce using rule 15 (expr -> STR .)
    LTE             reduce using rule 15 (expr -> STR .)
    EQ              reduce using rule 15 (expr -> STR .)
    NEQ             reduce using rule 15 (expr -> STR .)
    '               reduce using rule 15 (expr -> STR .)
    [               reduce using rule 15 (expr -> STR .)
    :               reduce using rule 15 (expr -> STR .)
    ,               reduce using rule 15 (expr -> STR .)
    )               reduce using rule 15 (expr -> STR .)
    ]               reduce using rule 15 (expr -> STR .)
    RETURN          reduce using rule 15 (expr -> STR .)
    BREAK           reduce using rule 15 (expr -> STR .)
    CONTINUE        reduce using rule 15 (expr -> STR .)
    {               reduce using rule 15 (expr -> STR .)
    PRINT           reduce using rule 15 (expr -> STR .)
    IF              reduce using rule 15 (expr -> STR .)
    WHILE           reduce using rule 15 (expr -> STR .)
    FOR             reduce using rule 15 (expr -> STR .)
    INTNUM          reduce using rule 15 (expr -> STR .)
    FLOATNUM        reduce using rule 15 (expr -> STR .)
    STR             reduce using rule 15 (expr -> STR .)
    EYE             reduce using rule 15 (expr -> STR .)
    ONES            reduce using rule 15 (expr -> STR .)
    ZEROS           reduce using rule 15 (expr -> STR .)
    (               reduce using rule 15 (expr -> STR .)
    ID              reduce using rule 15 (expr -> STR .)


state 18
